hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_bad_shape.php
<?hh
function f(): void {
  $f = ($v ==> $v['a']);
  $f(shape('b' => 0));
}
